feat: create specific configuration for publisher